fix: button stretching

--- a/src/components/elements/button/Button.module.scss
+++ b/src/components/elements/button/Button.module.scss
@@ -39,7 +39,7 @@ $buttonColor: #3769c7;
 }
 
 .stretchable {
-    min-width: fit-content;
+    width: fit-content;
 }
 
 .primary {
